--- a/official/resnet/service/templates/index.html
+++ b/official/resnet/service/templates/index.html
@@ -6,9 +6,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <form action="/post" method="post" class="form-inline">
+        <form action="/post" method="post" class="form-inline" enctype=multipart/form-data>
           <label for="name">画像</label>
-          <input type="file" class="form-control" id="image" name="image">
+          <input type="file" class="form-control" id="file" name="file">
           <button type="submit" class="btn btn-default">送信する</button>
         </form>
       </div>
